--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "pydantic==1.10.9",
     "PyYAML==6.0",
     "sniffio==1.3.0",
-    "starlette==0.27.0",
+    "starlette>=0.37.2",
     "httpcore==0.17.3",
     "httpx==0.24.1",
     "typing_extensions==4.6.3",
